--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/helpers/arrays.js"></script>
     <script src="scripts/sudoku.js"></script>
     <script src="scripts/controllers/puzzle.js"></script>
     <script src="scripts/services/solver.js"></script>
