keeping state in url

--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
     <script src="scripts/sudoku.js"></script>
     <script src="scripts/controllers/puzzle.js"></script>
     <script src="scripts/services/solver.js"></script>
+    <script src="scripts/services/serializer.js"></script>
     <script src="scripts/directives/oneNumber.js"></script>
     <script src="scripts/directives/browsable.js"></script>
     <!-- endbuild -->
